finish porting from svn, change namespace to console

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "admin",
+  "name": "console",
   "version": "0.0.0",
-  "description": "Small description for admin goes here",
+  "description": "Small description for console goes here",
   "private": true,
   "directories": {
     "doc": "doc",
