--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "font-awesome": "fontawesome#~4.4.0",
     "bridgeit.io.js": "dev",
     "validator-js": "~4.2.0",
-    "toastr": "~2.1.2"
+    "toastr": "~2.1.2",
+    "lodash": "~4.3.0"
   }
 }
