--- a/tests/.jshintrc
+++ b/tests/.jshintrc
@@ -22,7 +22,7 @@
     "currentURL",
     "currentPath",
     "currentRouteName",
-    "bridgeit",
+    "voyent",
     "validator"
   ],
   "node": false,
