--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     "ember-resolver": "^2.0.3",
     "ember-toastr": "1.3.1",
     "ember-tooltips": "0.5.8",
-    "loader.js": "^4.0.1"
+    "loader.js": "^4.0.1",
+    "gulp": "^3.9.0",
+    "gulp-load-plugins": "^1.1.0",
+    "gulp-util": "^3.0.7"
   }
+
 }
