NTFY-519 - Trying to fix camelize errors after build

--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "jquery": "^1.11.3",
     "bootstrap": "~3.3.5",
     "font-awesome": "fontawesome#~4.4.0",
+    "voyent.js": "https://github.com/voyent/voyent.js.git#gh-pages",
     "voyent.io.js": "https://github.com/voyent/voyent.io.js.git#dev",
     "validator-js": "~4.2.0",
     "toastr": "~2.1.2",
